modified development doc and swagger with nginx

--- a/开发文档-智慧工地大屏模块.md
+++ b/开发文档-智慧工地大屏模块.md
@@ -97,51 +97,51 @@
 
 SmartSiteGeneral
 
-|—— SmartSitePatrol ：隐患模块前端页面文件夹
+​	|—— SmartSitePatrol ：隐患模块前端页面文件夹
 
-|—— SmartSiteRecord ：隐患录入功能前端页面文件夹
+​	|—— SmartSiteRecord ：隐患录入功能前端页面文件夹
 
-|—— gongdi：
+​	|—— gongdi：
 
-​	|—— aboutNews.html：文字信息显示页面
+​			|—— aboutNews.html：文字信息显示页面
 
-​	|—— carNews.html：车辆信息显示页面
+​			|—— carNews.html：车辆信息显示页面
 
-​	|—— dataShow.html：数据展板显示页面
+​			|—— dataShow.html：数据展板显示页面
 
-​	|—— livebroadcast.html：多媒体图片及视频播放页面
+​			|—— livebroadcast.html：多媒体图片及视频播放页面
 
-​	|—— model-display.html：BIM模型展示页面
+​			|—— model-display.html：BIM模型展示页面
 
-​	|—— videoShow.html：监控视频展示页面
+​			|—— videoShow.html：监控视频展示页面
 
-​	|—— welcome.html：欢迎词页面
+​			|—— welcome.html：欢迎词页面
 
-|—— data-params.html：设置文字显示页面参数的页面
+​	|—— data-params.html：设置文字显示页面参数的页面
 
-|—— **index.html**：大屏模板选择主页
+​	|—— **index.html**：大屏模板选择主页
 
-|—— index-dispatcher-with-popper.html：提供弹出工人刷脸信息的大屏调度页面
+​	|—— index-dispatcher-with-popper.html：提供弹出工人刷脸信息的大屏调度页面
 
-|—— index-map-display.html：LED大屏位置地图展示页面
+​	|—— index-map-display.html：LED大屏位置地图展示页面
 
-|—— index-monitor-room.html：监控中心大屏配置页面（预留）
+​	|—— index-monitor-room.html：监控中心大屏配置页面（预留）
 
-|—— index-screen-dispatcher.html：大屏页面展示调度页面
+​	|—— index-screen-dispatcher.html：大屏页面展示调度页面
 
-|—— index-small-screen.html：LED小屏幕配置页面（预留）
+​	|—— index-small-screen.html：LED小屏幕配置页面（预留）
 
-|—— index-warning.html：预警信息弹框页面
+​	|—— index-warning.html：预警信息弹框页面
 
-|—— map-params.html：设置工地一张图参数的页面（暂时禁用）
+​	|—— map-params.html：设置工地一张图参数的页面（暂时禁用）
 
-|—— monitor-params.html：设置监控视频参数的页面（暂时禁用）
+​	|—— monitor-params.html：设置监控视频参数的页面（暂时禁用）
 
-|—— multi-params.html：设置多媒体播放参数的页面
+​	|—— multi-params.html：设置多媒体播放参数的页面
 
-|—— multi-play.html：RTMP视频播放页面
+​	|—— multi-play.html：RTMP视频播放页面
 
-|—— welcome-params.html：设置欢迎大屏参数的页面
+​	|—— welcome-params.html：设置欢迎大屏参数的页面
 
 
 
@@ -149,21 +149,23 @@ SmartSiteGeneral
 
 smartsite-master
 
-|—— eureka-service： 微服务注册中心组件
+​	|—— eureka-service： 微服务注册中心组件
 
-|—— zuul-gateway： 微服务网关组件
+​	|—— zuul-gateway： 微服务网关组件
 
-|—— config-server： 微服务配置中心组件
+​	|—— config-server： 微服务配置中心组件
 
-|—— websocket-service： websocket组件
+​	|—— websocket-service： websocket组件
 
-|—— ai-alert-service： AI预警模块后端
+​	|—— ai-alert-service： AI预警模块后端
 
-|—— face-detect-service：人脸识别门禁、考勤后端
+​	|—— face-detect-service：人脸识别门禁、考勤后端
 
-|—— patrolmodule-service：巡检隐患配置台账后端
+​	|—— patrolmodule-service：巡检隐患配置台账后端
 
-|—— **smartsite-service：** 大屏模块后端
+​	|—— **smartsite-service：** 大屏模块后端
+
+​	|—— assist-service： 为外部其他模块提供的接口集合
 
 
 
@@ -200,7 +202,192 @@ smartsite_ai_root
 反向代理采用Nginx实现，需要在Nginx的配置文件中设置对代理规则。Nginx.conf文件中，加入如下配置：
 
 ```xml
+#user  nobody;
+worker_processes  1;
 
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+
+#pid        logs/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+#Set up Websocket
+
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen       8080;
+		listen       8331;
+        server_name  localhost;
+	
+	location /websocket {
+        proxy_pass   http://127.0.0.1:12306/websocket;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+        client_max_body_size     1000m;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+	
+	location /spc-screen {
+        proxy_pass   http://127.0.0.1:2200/spc-screen;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	# For spring boot swagger relocation:
+	location ~^/swagger/(.*) {
+		proxy_redirect off;
+		# proxy_set_header Host $host;
+		proxy_set_header Host $host:$server_port; #添加:$server_port
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_pass http://127.0.0.1:12001/$1;
+	}
+	
+	location /SiteScreenParams {
+        proxy_pass   http://127.0.0.1:12306/SiteScreenParams;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /socket {
+        proxy_pass   http://127.0.0.1:12306/socket;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /SitePatrol {
+        proxy_pass   http://127.0.0.1:6075/SitePatrol;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /zb-api {
+        proxy_pass   http://127.0.0.1:12001/zb-api;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /FaceDetect {
+        proxy_pass   http://127.0.0.1:12010/FaceDetect;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /AIAlert {
+        proxy_pass   http://127.0.0.1:12002/AIAlert;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /external {
+        proxy_pass   http://127.0.0.1:12306/external;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /external_patrol {
+        proxy_pass   http://127.0.0.1:6075/external_patrol;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /Logger {
+        proxy_pass   http://127.0.0.1:6075/Logger;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+	
+	location /RiskRecord {
+        proxy_pass   http://127.0.0.1:6075/RiskRecord;
+		proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+		client_max_body_size     1000m;
+    }
+    }
+}
 ```
 
 ### 6. IIS发布网页并配置虚拟目录
@@ -216,7 +403,28 @@ smartsite_ai_root
 java -jar smartsite-service.jar
 ```
 
-启动jar的顺序为：eureka-service注册中心->zuul-gateway网关->其他服务
+启动jar的顺序为：eureka-service注册中心->zuul-gateway网关->其他服务。
+
+bat文件的模板如下：
+
+```shell
+@echo off
+cd /d e:/smartSite/
+
+start cmd /k "title Eureka-Server && java -jar e:/smartSite/eureka-service-Hoxton.BUILD-SNAPSHOT.jar"
+
+start cmd /k "title Zuul-Server && java -jar e:/smartSite/zuul-gateway-Hoxton.SR4.jar"
+
+start cmd /k "title Patrol-Module && java -jar e:/smartSite/patrolmodule-0.0.1-SNAPSHOT.jar"
+ 
+start cmd /k "title SiteScreen-Module && java -jar e:/smartSite/smartsite-1.0.RELEASE.jar"
+
+start cmd /k "title AI-Alert-Module && java -jar e:/smartSite/ai-alert-service-0.0.1-SNAPSHOT.jar"
+
+start cmd /k "title FaceDetect && java -jar e:/smartSite/face-detect-service-1.0.0-SNAPSHOT.jar"
+
+start cmd /k "title Assist-Service && java -jar e:/smartSite/assist-service-0.0.1-SNAPSHOT.jar"
+```
 
 
 
@@ -233,11 +441,7 @@ java -jar smartsite-service.jar
 * 大屏模块加入鉴权功能
 * 响应式
 * 门禁打卡信息实时推送新增信息种类
-* 党建家功能模块实现
 * 超图代码吸收及重构
-* 多个视频轮播功能
-
-
 
 
 
